<resources>
    <string name="app_name">Skyblock Bazaar Status</string>
    <string name="app_id">839294731515</string>
    <string name="achievement_simple_geometry" translatable="false">CgkI-4n1zrYYEAIQAA</string>
    <string name="achievement_civics_101" translatable="false">CgkI-4n1zrYYEAIQAQ</string>
    <string name="achievement_birthday_paradox" translatable="false">CgkI-4n1zrYYEAIQAg</string>
    <string name="achievement_everything_else_is_accelerating_up" translatable="false">CgkI-4n1zrYYEAIQAw</string>
    <string name="achievement_life_not_as_we_know_it" translatable="false">CgkI-4n1zrYYEAIQCA</string>
    <string name="achievement_market_manipulation" translatable="false">CgkI-4n1zrYYEAIQBA</string>
    <string name="achievement_pattern_recognizer" translatable="false">CgkI-4n1zrYYEAIQBQ</string>
    <string name="achievement_no_luck_required" translatable="false">CgkI-4n1zrYYEAIQBg</string>
    <string name="achievement_order_in_chaos" translatable="false">CgkI-4n1zrYYEAIQBw</string>
    <string name="leaderboard_most_coins_earned" translatable="false">CgkI-4n1zrYYEAIQCQ</string>
    <string name="leaderboard_most_active_users" translatable="false">CgkI-4n1zrYYEAIQCw</string>
    <string name="leaderboard_notifications_received" translatable="false">CgkI-4n1zrYYEAIQDA</string>
    <string name="api_key">Enter your Skyblock API key here</string>
    <string name="first_time">Hey, looks like this is your first time using this app:</string>
    <string name="key_instructions">In order to get your Skyblock API Key, log into skyblock, and type in /api.\n
        It will then tell you to type in \n/api new. Take that key and paste it in the box above.\n
        I recommend saving the key somewhere on your computer as well so you don\'t need to keep making new ones.\n
        (Though if you lose it, no worries, you should be able to just type in /api new again when you login and it\'ll make you a new one)</string>
    <string name="dummy_instructions">press this button once you do</string>
    <string name="preference_api_key">APIKey</string>
    <string name="url_beginning">https://api.hypixel.net/skyblock/bazaar</string>
    <string name="button_fail">Enter a valid key first</string>
    <string name="button_success">Key works! Press this button again to begin.</string>
    <string name="loading_msg">Currently loading</string>
    <string name="current_as_of">Prices updated on:\n</string>
    <string name="interviewer_message">Welcome to my app!\n
        Although this app was designed for players of a minecraft server called Hypixel Skyblock,
        I also made it as a demonstration of my coding ability. \n
        I learned how to do everything in this app in just one summer during the covid when I could\'nt find any other job.\n
        This app won\'t be super pretty, but it should be quite user friendly, and hopefully bug free.\n
        If you don\'t know what Hypixel Skyblock is, the general gist is that it\'s a game where you can collect
        resources, and either use them for yourself or sell them to other players. Hypixel has provided an
        API where you can access the prices of all the items in json form as long as you have your API key, and each individual
        person can access the server up to 120 times a minute with their key (completely reasonable, prevents DDOS)\n
        However, considering a playerbase in the hundreds of thousands, if people actually like my app, it makes sense I couldn\'t just
        use my own key for everyone. But since this is for a demonstration, I\'m not assuming you play the game, so I have provided my key
        for your use. Please try to avoid reloading the app more than 120 times per minute. \n
        If you are sufficiently impressed and want to know more, let me know and I can share the well commented source code with you.\n
        A bit more context if you don\'t actually know what\'s going on in this game:\n
        The game has \"minions\" which produce resources even when you are offline.\n
        They all produce resources at different rates, so this app can read the sell data and tell you which minion
        will produce money at the fastest rate for you.\n
        Since demand is fluid, this app can check the prices for you at the frequency you choose, and send push notifications when prices change
        drastically. Of course, the definition of drastic is up to you, if you think 5% is enough, great, or perhaps you only care when it changes by
        more than 50%, also up to you.
        </string>
    <string name="demo_button_text">I get it, now take me to the actual app</string>
    <string name="view_prices">view current bazaar prices</string>
    <string name="title_activity_view_prices">Bazaar Prices</string>
    <string name="view_prices_settings">Order Prices Will be Displayed</string>
    <string name="arbitrage_settings">Arbitrage Settings</string>
    <string name="alphabetical">Alphabetically</string>
    <string name="by_popularity">By Popularity</string>
    <string name="quick_flip_header">Profits from leveraging the difference between the buy and sell price:</string>
    <string name="quick_flip_instructions">\nBasically, if the sell and buy prices are very different, you can create a large buy order at the current price
                and flip it once the order is fulfilled.\n
                WARNING: Does not always work, for example, diamonds could be sell for 10 and buy for 12, and you could buy them for
                10 coins and flip them for 12, thinking you\'ll make 2 profit per diamond, but remember there\'s always a chance that after
                your buy order is filled, the buy price drops to 8, and now you\'ve made a loss. So proceed at your own risk.</string>
    <string name="bazaar_flip">show me the best bazaar flips</string>
    <string name="npc_flip">Profits from selling NPC goods on bazaar</string>
    <string name="npc_flip_help">\nAt NPC shops, you can buy up to 640 of each item per day at a fixed price.\n
                                If that price is lower than the current bazaar sell price, you can buy the item from the NPC and sell it immediately for guaranteed profit.</string>
    <string name="npc_flip_button">show me today\'s profit</string>
    <string name="question_mark">\?</string>
    <string name="bazaar_flip_amount">Maximum buy order amount:</string>
</resources>