<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingsActivity">

        <EditText
            android:id="@+id/editNumCustomFly"
            android:layout_width="141dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/editNumCustomBoost"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Custom Fuel Boost %:"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUpgrade2" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Custom Speed Boost %:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUpgrade2" />

        <EditText
            android:id="@+id/editNumCustomBoost"
            android:layout_width="151dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/view_prices_settings"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/arbitrage_settings"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupViewPricesSort" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Minion Optimizer Settings"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editDecimalBazaarTax" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="6dp" />

        <RadioGroup
            android:id="@+id/radioGroupViewPricesSort"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radioByPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_popularity" />

            <RadioButton
                android:id="@+id/radioAlphabetical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alphabetical" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bazaar_flip_amount"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editNumBazaarInvestment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/btnSaveInvestment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"
            app:layout_constraintStart_toEndOf="@+id/editNumBazaarInvestment"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/btnSaveBazaarTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"
            app:layout_constraintStart_toEndOf="@+id/editDecimalBazaarTax"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Switch
            android:id="@+id/switchHideOrderWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Hide Risky Orders"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editNumBazaarInvestment" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select shop discount:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/switchHideOrderWarning" />

        <RadioGroup
            android:id="@+id/radioGroupDiscountAmount"
            android:layout_width="196dp"
            android:layout_height="131dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <RadioButton
                android:id="@+id/radioNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non Talisman (0%)" />

            <RadioButton
                android:id="@+id/radioRing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shady Ring (1%)" />

            <RadioButton
                android:id="@+id/radioArtifact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shady Artifact (2%)" />

            <RadioButton
                android:id="@+id/radioSeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seal of the Family (3%)" />
        </RadioGroup>

        <EditText
            android:id="@+id/editDecimalBazaarTax"
            android:layout_width="136dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Bazaar tax percentage:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupDiscountAmount" />

        <TextView
            android:id="@+id/txtFuelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Default Fuel Boost Percentage"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupFuelType" />

        <EditText
            android:id="@+id/editTextFuel"
            android:layout_width="92dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtFuelType" />

        <Button
            android:id="@+id/btnSaveMinionSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="save minion settings"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxWoodCrystal" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Upgrade Slot 2:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUpgrade1" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Upgrade Slot 1:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextFuel" />

        <Spinner
            android:id="@+id/spinnerUpgrade2"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <Spinner
            android:id="@+id/spinnerUpgrade1"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/btnMinionHelp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_mark"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveBazaarTax" />

        <RadioGroup
            android:id="@+id/radioGroupFuelType"
            android:layout_width="254dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView21">

            <RadioButton
                android:id="@+id/radioRegFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Percentage Boost" />

            <RadioButton
                android:id="@+id/radioCatalyst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Multiplier" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select Fuel Type"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/placeholdertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/editTextFuel"
            tools:layout_editor_absoluteX="307dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select Active Crystals:"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editNumCustomBoost" />

        <CheckBox
            android:id="@+id/checkBoxFarmCrystal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Farming"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <CheckBox
            android:id="@+id/checkBoxWoodCrystal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Woodcutting"
            app:layout_constraintStart_toEndOf="@+id/checkBoxFarmCrystal"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Remember to click SAVE MINION SETTINGS)"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>